# mrhpsuser

./: .gitignore  AUTHORS.txt  CMakeLists.txt  CREDITS.txt  README.md  README.txt  TODO.txt  VERSION.txt
doc/source/: conf.py  index.rst
doc/source/Building/: Building.rst
doc/source/Callbacks/: Callbacks.rst
doc/source/Callbacks/Content/: CBAccessClear.rst  CBAccessContent.rst
doc/source/Callbacks/Location/: CBGetLocation.rst
doc/source/Callbacks/Service/: CBAvail.rst  CBCustomCommand.rst  CBReset.rst
doc/source/Configuration_File/: Configuration_File.rst
doc/source/Service_Info/: Service_Info.rst
doc/source/User_Content/: User_Content.rst
src/: Configuration.cpp  Configuration.h  Main.cpp  Revision.h
src/Callback/Content/: CBAccessClear.cpp  CBAccessClear.h  CBAccessContent.cpp  CBAccessContent.h
src/Callback/Location/: CBGetLocation.cpp  CBGetLocation.h  CBGetLocationO.cpp  CBGetLocationO.h  Server.cpp  Server.h
src/Callback/Service/: CBAvail.cpp  CBAvail.h  CBCustomCommand.cpp  CBCustomCommand.h  CBReset.cpp  CBReset.h
src/Content/: Content.cpp  Content.h  ContentPaths.h
